index에 동적 css 추가중
너무 밋밋한 것 같아 조금씩이나마 동적인 css 추가중
- 컨텐츠 부분 최상단 35만명, 5천명 숫자 카운팅 제이쿼리 추가
- 컨텐츠 2번 VIRTUAL EXPERIENCE 영역 오른쪽 배너에 .hover 추가

--- a/css/contents.css
+++ b/css/contents.css
@@ -63,7 +63,6 @@ font-size: 40px;
 }
 
 #contents_00 > ul > li {
-
     width: 230px;
     height: 120px;
     display: inline-block;
@@ -110,7 +109,7 @@ font-size: 40px;
     padding-left: 12px;
 }
 
-#contents_00 span {
+#contents_00 span, .memberCountCon1, .memberCountCon2 {
     font-size: 40px;
     font-weight: 900;
     letter-spacing: -3px;
@@ -120,6 +119,7 @@ font-size: 40px;
 }
 
 #contents_00 em {
+
     letter-spacing: 0;
     font-size: 18px;
 }
@@ -160,9 +160,21 @@ font-size: 40px;
     width: 270px;
     height: 275px;
     float: left;
-    border: 2px solid #eeeeee;
+    border: 5px solid #eeeeee;
     position: relative;
     box-sizing: border-box;
+    cursor: pointer;
+    transition: all 0.5;
+}
+
+#contents_01_con2 > div:hover{
+    border-color: #058ece;     
+ 
+}
+
+#contents_01_con2 > div:hover h3{
+    color:#0087cc;    
+
 }
 
 #contents_01_con2 > div:nth-of-type(1) {
@@ -211,6 +223,7 @@ font-size: 40px;
     font-size: 22px;
     font-weight: 700;
     margin-bottom: 20px;
+    transition: all 0.5;
 }
 
 #contents_01_con2 > div p{
