--- a/css/contents.css
+++ b/css/contents.css
@@ -238,7 +238,7 @@ font-size: 40px;
 
 /*contents_02_top*/
 #contents_02_top {
-    background: #eeeeee;
+    background: #f3f3f3;
     width: 100%;
     height: 220px;
     
@@ -274,7 +274,8 @@ font-size: 40px;
 
 #contente2_1 > .con {
     float: right;    
-    width: 700px;}
+    width: 700px;
+}
 
 .no1 {
     font-size: 0;
@@ -293,25 +294,29 @@ font-size: 40px;
     float: left;
     font-size: 16px;
     font-weight: 700;
-    float: left;
     margin-right: 8px;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-top: 28px;
+    margin-bottom: 3px;
     text-indent: 10px;
+    border:2px solid #0082ce; 
+    border-radius: 5px;
 }
 
 
 .result {
     clear: both;
     display: block;
+    
+   
 }
 
 .result li {
-    width: 140px;
-    height: 30px;
-    border: 1px solid red;
+    width: 200px;
+    height: 80px;
     text-align: center;
     float: left;
+    font-size: 14px;
+    margin-right: 8px;
 }
 
 
@@ -320,7 +325,7 @@ font-size: 40px;
 /*contents_02_banner 배너 8개짜리*/
 
 #contents_02 {
-    background: #eeeeee;
+    background: #f3f3f3;
     width: 100%;
     height: 600px;
     padding-bottom: 150px;
