--- a/css/bottom.css
+++ b/css/bottom.css
@@ -1,10 +1,9 @@
 @charset "urf-8";
 
 
-#bottom_wrap{clear: both;  background-color: #191919; height: 230px; font-size: 15px; padding-top: 30px; width: 100%; min-width: 1400px; position: relative; }
-#bottom{margin: 0 auto; width:1400px; height: 200px;
+#bottom_wrap{clear: both;  background-color: #191919; height: 230px; font-size: 15px; padding-top: 30px; width: 100%; min-width: 1000px; position: relative; overflow: hidden;}
+#bottom{margin: 0 auto; width:1300px; height: 200px;
 background: url(../images/bottom_logo2.png) no-repeat 1180px 100px;
-    
 }
 
 
