--- a/css/contents.css
+++ b/css/contents.css
@@ -144,17 +144,47 @@ font-size: 40px;
 }
 
 #contents_01_con1 {
-    float: left;
-    border: 2px solid #eeeeee;
-    width: 846px;
-    height: 551px;
+    float: left; 
+      
+}
+
+#contents_01_video{
+    border: 5px solid #eeeeee;
+    width: 840px;
+    height:545px;
+    position: relative; 
+    background-color: #eeeeee;
+
+}
+
+#contents_01_video .over_video{
+    position: absolute;
+    left: 0;
+    bottom:0;
+    background-color: #eeeeee;
+    width: 100%;
+    height: 50px;
+}
+
+#contents_01_video video { 
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height:545px;
+    box-sizing: border-box;
+
+}
+
+#contents_01_video video source{
+ 
+
 }
 
 #contents_01_con2 {
     width: 545px;
-    height: 561px;
     float: right;
-}
+    }
 
 #contents_01_con2 > div {
     width: 270px;
@@ -371,8 +401,13 @@ font-size: 40px;
 
 .con3_top_img{ /*배너이미지*/
     position: relative;
-
 }
+
+con3_top_img img{
+    padding: 50%;
+    border-radius: 50%;
+}
+
 
 .con3_top_img>span{
     display: block;
